[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/bonus_effect.gd" type="Script" id=1]
[ext_resource path="res://fonts/arial0.fnt" type="BitmapFont" id=2]
[ext_resource path="res://sounds/bonus_effect.ogg" type="AudioStream" id=3]
[ext_resource path="res://sounds/fish_eaten.ogg" type="AudioStream" id=4]
[ext_resource path="res://sounds/collect.ogg" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]

resource/name = "effect"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pos:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3, 0.4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pos:transform/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}

[node name="bonus_effect" type="Position2D"]

z/z = 150
script/script = ExtResource( 1 )

[node name="pos" type="Position2D" parent="."]

visibility/opacity = 0.0
transform/scale = Vector2( 0.1, 0.1 )

[node name="Label" type="Label" parent="pos"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -49.0
margin/top = -42.0
margin/right = 61.0
margin/bottom = 49.0
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/effect = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.01
one_shot = true
autostart = false

[node name="sounds" type="Node2D" parent="."]

[node name="hole" type="StreamPlayer" parent="sounds"]

stream/stream = ExtResource( 3 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="fish" type="StreamPlayer" parent="sounds"]

stream/stream = ExtResource( 4 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="bonus10" type="StreamPlayer" parent="sounds"]

stream/stream = ExtResource( 5 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="finished" from="anim" to="." method="_on_anim_finished"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


